--- a/index.html
+++ b/index.html
@@ -231,24 +231,25 @@
                     <p>tomy21.agung@gmail.com</p>
                     <p>Perumahan Serpong Garden Village Blok D4/18</p>
                     <p>Parung Panjang, Bogor</p>
+                    <p>+62 851 6153 7784</p>
                 </div>
                 <div class="w-full px-4 mb-12 md:w-1/2">
                     <h3 class="font-semibold text-xl text-white mb-5">Tautan</h3>
                     <ul class="text-slate-300">
                         <li>
-                            <a href="#" class="inline-block text-base hover:text-primary mb-3">Beranda</a>
+                            <a href="#home" class="inline-block text-base hover:text-primary mb-3">Beranda</a>
                         </li>
                         <li>
-                            <a href="#" class="inline-block text-base hover:text-primary mb-3">Tentang Saya</a>
+                            <a href="#about" class="inline-block text-base hover:text-primary mb-3">Tentang Saya</a>
                         </li>
                         <li>
-                            <a href="#" class="inline-block text-base hover:text-primary mb-3">Portfolio</a>
+                            <a href="#portfolio" class="inline-block text-base hover:text-primary mb-3">Portfolio</a>
                         </li>
                         <li>
-                            <a href="#" class="inline-block text-base hover:text-primary mb-3">Sertifikasi</a>
+                            <a href="#sertifikasi" class="inline-block text-base hover:text-primary mb-3">Sertifikasi</a>
                         </li>
                         <li>
-                            <a href="#" class="inline-block text-base hover:text-primary mb-3">contact</a>
+                            <a href="#contact" class="inline-block text-base hover:text-primary mb-3">contact</a>
                         </li>
                     </ul>
                 </div>
